--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -27,10 +27,11 @@
     repo: https://gitlab.torproject.org/tpo/core/tor.git/
     dest: /root/tor
     version: "{{ tor_git_version }}"
+    bare: true
     force: true
   register: _repo
 
-- name: Apply patches
+- name: Apply patches of Tor
   ansible.builtin.shell:
     cmd: curl -s {{ item }} | patch -p 1
     chdir: /root/tor
@@ -53,7 +54,7 @@
     chdir: /root/tor
 
 # test if Tor needs to be restarted
-- name: Copy Tor binary
+- name: Install Tor binary
   when: not ansible_check_mode
   ansible.builtin.copy:
     src: /root/tor/src/app/tor
