--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -2,11 +2,11 @@
 additional_ports: []
 additional_software: []
 
-kernel_debian_version: ""
+# for other kernels than provided by "stable"
 kernel_debian_repo: "" # "experimental"
+kernel_debian_version: ""
 
-kernel_git_version: "HEAD" # usually the default branch
 kernel_git_repo: "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
+kernel_git_version: "" # e.g. "HEAD" or "v6.7.3"
 kernel_git_repo_dir: "/root/linux"
-kernel_git_revision: "" # e.g. "v6.7.3"
 kernel_git_patches: []
