--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -86,7 +86,7 @@
         - kernel
 
     - name: Kernel Git
-      when: kernel_git_revision != ""
+      when: kernel_git_version != ""
       ansible.builtin.import_tasks: kernel-git.yaml
       tags:
         - kernel
