--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -36,15 +36,23 @@
   ansible.builtin.shell:
     cmd: |
       set -e
-      ./autogen.sh
-      ./configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc \
-          --localstatedir=/var/lib --datarootdir=/usr/share \
-          --disable-systemd --disable-asciidoc --disable-html-manual --disable-module-dirauth --disable-unittests \
-          --enable-pic --enable-gcc-hardening --enable-linker-hardening --enable-module-relay
+
+      if [ ! -x ./configure ]; then
+        rm -f Makefile
+        ./autogen.sh
+      fi
+
+      ./configure --prefix=/usr \
+          --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc \
+          --localstatedir=/var --datarootdir=/usr/share \
+          --disable-systemd --disable-asciidoc --disable-html-manual --disable-unittests \
+          --enable-module-relay --disable-module-dirauth \
+          --enable-pic --enable-gcc-hardening --enable-linker-hardening --disable-all-bugs-are-fatal --enable-seccomp
+
       make -j {{ 1 + (ansible_facts.memtotal_mb / 2048) | int }}
     chdir: /root/tor
 
-# test if Tor needs to be restarted
+# test at Tor restart needed
 - name: Install Tor binary
   when: not ansible_check_mode
   ansible.builtin.copy:
