explicitely rely on known ssh key

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,11 +14,13 @@ inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
+# reduce spam
 display_skipped_hosts = false
+
 # would clash with search pattern of grep
 no_target_syslog = True
 
 remote_user = root
 
-# discouraged from security perspective
-ssh_args = -o Compression=no
+# compression is discouraged
+ssh_args = -o Compression=no -o StrictHostKeyChecking=on
