--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -32,9 +32,4 @@
     dest: /usr/bin/
     mode: a+x
     remote_src: yes
-  register: _binary
-
-- name: Set fact
-  when: _binary.changed
-  ansible.builtin.set_fact:
-    force_restart: true
+  notify: "restart service"
