--- a/playbooks/roles/setup-tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-debian.yaml
@@ -18,7 +18,7 @@
       - obfs4proxy
       - tor
       - tor-geoipdb
-  register: _binary
+  notify: "restart service"
 
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
@@ -26,11 +26,7 @@
     value: "0" # Debian  bookworm default: 14886
     sysctl_file: /etc/sysctl.d/21tor-relay.conf
     sysctl_set: true
-
-- name: Set fact
-  when: _binary.changed
-  ansible.builtin.set_fact:
-    force_restart: true
+  notify: "restart service"
 
 # https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1021911
 - name: Obfs4 port
@@ -56,3 +52,4 @@
         content: |
           [Service]
           NoNewPrivileges=no
+      notify: "restart service"
