--- a/playbooks/roles/setup-tor/tasks/config.yaml
+++ b/playbooks/roles/setup-tor/tasks/config.yaml
@@ -3,19 +3,4 @@
   ansible.builtin.template:
     src: torrc.j2
     dest: /etc/tor/torrc
-  register: _config
-
-- name: Restart Tor service
-  when: not ansible_check_mode and (force_restart or _config.changed)
-  ansible.builtin.service:
-    name: tor
-    state: restarted
-    daemon_reload: true
-
-- name: Ensure Tor service is started
-  when: not ansible_check_mode
-  ansible.builtin.service:
-    name: tor
-    state: started
-    daemon_reload: true
-    enabled: true
+  notify: "restart service"
