--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -9,7 +9,7 @@
     - "v6"
 
 - name: Reset firewall
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: "{{ '/root/firewall-ip' + item + '.sh' }} start"
   with_items:
     - "v4"
