--- a/playbooks/roles/setup_tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-git.yaml
@@ -76,7 +76,7 @@
 
 - name: Install Tor
   when: _binary.changed
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: make install
     chdir: /root/tor
 
