--- a/playbooks/roles/setup/tasks/validate.yaml
+++ b/playbooks/roles/setup/tasks/validate.yaml
@@ -7,14 +7,14 @@
       - "ansible_facts.default_ipv6.address is not match('fe80::')"
 
 - name: Validate metrics_port
-  when: metrics_port is defined and metrics_port
+  when: metrics_port
   ansible.builtin.assert:
     quiet: true
     that:
       - "(metrics_port | int > 0) and (metrics_port | int < 2**16)"
 
 - name: Validate prometheus_server
-  when: prometheus_server is defined and prometheus_server
+  when: prometheus_server
   ansible.builtin.assert:
     quiet: true
     that:
@@ -25,7 +25,6 @@
   ansible.builtin.assert:
     quiet: true
     that:
-      - "kernel_debian_version is defined"
       - "kernel_debian_version"
 
 - name: Validate kernel_debian_version
@@ -33,5 +32,4 @@
   ansible.builtin.assert:
     quiet: true
     that:
-      - "kernel_debian_repo is defined"
       - "kernel_debian_repo"
