--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -8,3 +8,7 @@ kernel_debian_version: ""
 
 kernel_git_version: "" # e.g. "HEAD" or "v6.7.3"
 kernel_git_patches: []
+
+metrics_port: ""
+prometheus_node_exporter: ""
+prometheus_server: ""
