add logrotate script for self-compiled Tor

--- a/playbooks/roles/setup_tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-git.yaml
@@ -92,6 +92,11 @@
     dest: /etc/systemd/system/
   notify: "restart service"
 
+- name: Add logrotate config
+  ansible.builtin.copy:
+    src: tor
+    dest: /etc/logrotate.d/
+
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
     name: user.max_user_namespaces
