--- a/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-proxy.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Get proxy logs except clients statistic messages
   changed_when: false
-  ansible.builtin.shell: >-
+  ansible.builtin.shell: |
     journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
     grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found' -e ' Proxy connection closed' |
     tail -n {{ log_lines }}
