--- a/playbooks/roles/info_tor/tasks/log-err.yaml
+++ b/playbooks/roles/info_tor/tasks/log-err.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Check error log
   changed_when: false
-  ansible.builtin.shell: >-
+  ansible.builtin.shell: |
     grep -h -v -e 'opening .*log file.' {{ log_err }}.1 {{ log_err }} 2>/dev/null |
     tail -n {{ log_lines }}
   register: _result
