--- a/playbooks/roles/setup/tasks/kernel-git.yaml
+++ b/playbooks/roles/setup/tasks/kernel-git.yaml
@@ -53,4 +53,5 @@
       make modules_install
       update-initramfs -u
     chdir: "/usr/src/linux-{{ kernel_git_version }}/"
+    executable: /bin/bash
   notify: "reboot required"
