fix if a bool is undef

--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -35,7 +35,7 @@
         - firewall
 
     - name: Debian
-      when: tor_build_from_source is false
+      when: not tor_build_from_source
       ansible.builtin.import_tasks: tor-debian.yaml
       tags:
         - tor
